[gd_scene load_steps=13 format=3 uid="uid://d3nhi2w5tqpck"]

[ext_resource type="Script" path="res://Main/DrawingGame/Drawer/drawer_scene.gd" id="1_da58w"]
[ext_resource type="Theme" uid="uid://r7pqoqyivvll" path="res://Main/Assets/Themes/main_theme.tres" id="1_pxe1l"]
[ext_resource type="Script" path="res://Main/DrawingGame/Drawer/drawing_canvas.gd" id="2_b0q1k"]
[ext_resource type="ButtonGroup" uid="uid://c65o3aj1a6ld4" path="res://Main/Assets/pallete_button_group.tres" id="5_mruvl"]
[ext_resource type="Script" path="res://Main/DrawingGame/Drawer/color_button.gd" id="6_5lumk"]
[ext_resource type="LabelSettings" uid="uid://bv26f3wi54brd" path="res://Main/Assets/label_settings.tres" id="7_unjb5"]
[ext_resource type="ButtonGroup" uid="uid://c5loj0s0h4wiw" path="res://Main/Assets/instrument_button_group.tres" id="8_43mr8"]
[ext_resource type="ButtonGroup" uid="uid://d4i1tamup7b5u" path="res://Main/Assets/brush_size_button_group.tres" id="10_i1k64"]
[ext_resource type="PackedScene" uid="uid://80qhg4to1d0c" path="res://Main/DrawingGame/ImageHint/image_hint_scene.tscn" id="11_k2adu"]
[ext_resource type="PackedScene" uid="uid://cvdgrkvjr5e4c" path="res://Main/Debug/debug_label.tscn" id="11_p71pq"]
[ext_resource type="PackedScene" uid="uid://bw671qewpntp1" path="res://Main/DrawingGame/Timer/game_mode_timer.tscn" id="12_s80va"]

[sub_resource type="LabelSettings" id="LabelSettings_x1i5x"]
font_size = 25
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="DrawerScene" type="Control" node_paths=PackedStringArray("drawing_canvas")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_pxe1l")
script = ExtResource("1_da58w")
drawing_canvas = NodePath("HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
collapsed = true
dragger_visibility = 2

[node name="MiddlePanelContainer" type="PanelContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("1_pxe1l")
theme_type_variation = &"Background2"

[node name="CanvasAndRightPanelHSplitContainer" type="HSplitContainer" parent="HSplitContainer"]
layout_mode = 2
collapsed = true
dragger_visibility = 2

[node name="DrawingCanvasPanelContainer" type="PanelContainer" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer" node_paths=PackedStringArray("drawing_line", "paint_viewport", "painted_image", "background", "erase_mask_line", "erase_mask_viewport", "color_picker", "color_button")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_b0q1k")
drawing_line = NodePath("PaintViewportContainer/PaintViewport/DrawingLine")
paint_viewport = NodePath("PaintViewportContainer/PaintViewport")
painted_image = NodePath("PaintViewportContainer/PaintViewport/PaintedImage")
background = NodePath("PaintViewportContainer/PaintViewport/Background")
erase_mask_line = NodePath("EraseMaskViewportContainer/EraseMaskViewport/EraseMaskLine")
erase_mask_viewport = NodePath("EraseMaskViewportContainer/EraseMaskViewport")
color_picker = NodePath("../RightPanelContainer/VBoxContainer/ColorPicker")
color_button = NodePath("../RightPanelContainer/VBoxContainer/PalleteHFlowContainer/ColorButton")
pallete_button_group = ExtResource("5_mruvl")
brush_size_button_group = ExtResource("10_i1k64")

[node name="OuterBackground" type="ColorRect" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer"]
z_index = -1
layout_mode = 2
color = Color(0.17, 0.17, 0.17, 1)

[node name="EraseMaskViewportContainer" type="SubViewportContainer" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="EraseMaskViewport" type="SubViewport" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer/EraseMaskViewportContainer"]
transparent_bg = true
handle_input_locally = false
msaa_2d = 3
size = Vector2i(826, 648)
render_target_update_mode = 4

[node name="EraseMaskLine" type="Line2D" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer/EraseMaskViewportContainer/EraseMaskViewport"]
width = 20.0
default_color = Color(0, 0, 0, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="PaintViewportContainer" type="SubViewportContainer" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PaintViewport" type="SubViewport" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer/PaintViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(826, 648)
render_target_update_mode = 4

[node name="Background" type="ColorRect" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer/PaintViewportContainer/PaintViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(413, 324)

[node name="PaintedImage" type="TextureRect" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer/PaintViewportContainer/PaintViewport"]
offset_right = 40.0
offset_bottom = 40.0

[node name="DrawingLine" type="Line2D" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer/PaintViewportContainer/PaintViewport"]
unique_name_in_owner = true
width = 20.0
default_color = Color(0.171, 0.5301, 0.57, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="BrushSizePanelContainer" type="PanelContainer" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"Background2"

[node name="ExtraDrawingSettingsHBoxContainer" type="HBoxContainer" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer/BrushSizePanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer/BrushSizePanelContainer/ExtraDrawingSettingsHBoxContainer"]
layout_mode = 2
text = "Brush Size:"
label_settings = ExtResource("7_unjb5")

[node name="XSButton" type="Button" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer/BrushSizePanelContainer/ExtraDrawingSettingsHBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
toggle_mode = true
button_group = ExtResource("10_i1k64")
text = "XS"

[node name="SButton" type="Button" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer/BrushSizePanelContainer/ExtraDrawingSettingsHBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
toggle_mode = true
button_group = ExtResource("10_i1k64")
text = "S"

[node name="MButton" type="Button" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer/BrushSizePanelContainer/ExtraDrawingSettingsHBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
toggle_mode = true
button_pressed = true
button_group = ExtResource("10_i1k64")
text = "M"

[node name="LButton" type="Button" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer/BrushSizePanelContainer/ExtraDrawingSettingsHBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
toggle_mode = true
button_group = ExtResource("10_i1k64")
text = "L"

[node name="XLButton" type="Button" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer/BrushSizePanelContainer/ExtraDrawingSettingsHBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
toggle_mode = true
button_group = ExtResource("10_i1k64")
text = "XL"

[node name="RightPanelContainer" type="PanelContainer" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_pxe1l")
theme_type_variation = &"Background2"

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer"]
layout_mode = 2
alignment = 1

[node name="PaitingLabel" type="Label" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
label_settings = SubResource("LabelSettings_x1i5x")
autowrap_mode = 2

[node name="PalleteHFlowContainer" type="HFlowContainer" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="ColorButton" type="Button" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/PalleteHFlowContainer"]
visible = false
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = ExtResource("5_mruvl")
script = ExtResource("6_5lumk")

[node name="ColorPicker" type="ColorPicker" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
edit_alpha = false
sampler_visible = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false

[node name="HFlowContainer" type="HFlowContainer" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10

[node name="PickerButtton" type="Button" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/HFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
toggle_mode = true
button_group = ExtResource("8_43mr8")
text = "Picker"

[node name="BrushButtton" type="Button" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/HFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
toggle_mode = true
button_pressed = true
button_group = ExtResource("8_43mr8")
text = "Brush"

[node name="EraserButton" type="Button" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/HFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
toggle_mode = true
button_group = ExtResource("8_43mr8")
text = "Eraser"

[node name="BucketButton" type="Button" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/HFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
toggle_mode = true
button_group = ExtResource("8_43mr8")
text = "Bucket
"

[node name="LineButton" type="Button" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/HFlowContainer"]
visible = false
layout_mode = 2
toggle_mode = true
button_group = ExtResource("8_43mr8")
text = "Line
"

[node name="EmptyRectangleButton" type="Button" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/HFlowContainer"]
visible = false
layout_mode = 2
toggle_mode = true
button_group = ExtResource("8_43mr8")
text = "Empty Rectangle"

[node name="FullRectangleButton" type="Button" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/HFlowContainer"]
visible = false
layout_mode = 2
toggle_mode = true
button_group = ExtResource("8_43mr8")
text = "Full Rectangle"

[node name="EmptyCircleButton" type="Button" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/HFlowContainer"]
visible = false
layout_mode = 2
toggle_mode = true
button_group = ExtResource("8_43mr8")
text = "Empty Circle"

[node name="FullCircleButton" type="Button" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/HFlowContainer"]
visible = false
layout_mode = 2
toggle_mode = true
button_group = ExtResource("8_43mr8")
text = "Full Circle
"

[node name="ActionsHBoxContainer" type="HBoxContainer" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/separation = 40
alignment = 2

[node name="ActionBackButton" type="Button" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/ActionsHBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "⬅"

[node name="ActionForwardButton" type="Button" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/ActionsHBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "⮕"

[node name="SaveButton" type="Button" parent="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "💾"

[node name="GameModeTimer" parent="." instance=ExtResource("12_s80va")]
unique_name_in_owner = true

[node name="HintImage" parent="." instance=ExtResource("11_k2adu")]
unique_name_in_owner = true
layout_mode = 1
offset_top = -49.0
offset_right = 68.0

[node name="DebugLabel" parent="." instance=ExtResource("11_p71pq")]
layout_mode = 0

[connection signal="image_changed" from="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer" to="." method="_on_drawing_canvas_image_changed"]
[connection signal="pressed" from="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer/BrushSizePanelContainer/ExtraDrawingSettingsHBoxContainer/XSButton" to="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer" method="_on_xs_button_pressed"]
[connection signal="pressed" from="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer/BrushSizePanelContainer/ExtraDrawingSettingsHBoxContainer/SButton" to="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer" method="_on_s_button_pressed"]
[connection signal="pressed" from="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer/BrushSizePanelContainer/ExtraDrawingSettingsHBoxContainer/MButton" to="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer" method="_on_m_button_pressed"]
[connection signal="pressed" from="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer/BrushSizePanelContainer/ExtraDrawingSettingsHBoxContainer/LButton" to="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer" method="_on_l_button_pressed"]
[connection signal="pressed" from="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer/BrushSizePanelContainer/ExtraDrawingSettingsHBoxContainer/XLButton" to="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer" method="_on_xl_button_pressed"]
[connection signal="toggled" from="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/PalleteHFlowContainer/ColorButton" to="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/PalleteHFlowContainer/ColorButton" method="_on_toggled"]
[connection signal="color_changed" from="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/ColorPicker" to="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer" method="_on_color_picker_color_changed"]
[connection signal="mouse_exited" from="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/ColorPicker" to="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/ColorPicker" method="_on_mouse_exited"]
[connection signal="toggled" from="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/HFlowContainer/PickerButtton" to="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer" method="_on_picker_buttton_toggled"]
[connection signal="toggled" from="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/HFlowContainer/BrushButtton" to="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer" method="_on_brush_buttton_toggled"]
[connection signal="toggled" from="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/HFlowContainer/EraserButton" to="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer" method="_on_eraser_button_toggled"]
[connection signal="toggled" from="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/HFlowContainer/BucketButton" to="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer" method="_on_bucket_button_toggled"]
[connection signal="toggled" from="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/HFlowContainer/LineButton" to="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer" method="_on_line_button_toggled"]
[connection signal="toggled" from="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/HFlowContainer/EmptyRectangleButton" to="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer" method="_on_empty_rectangle_button_toggled"]
[connection signal="toggled" from="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/HFlowContainer/FullRectangleButton" to="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer" method="_on_full_rectangle_button_toggled"]
[connection signal="toggled" from="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/HFlowContainer/EmptyCircleButton" to="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer" method="_on_empty_circle_button_toggled"]
[connection signal="toggled" from="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/VBoxContainer/HFlowContainer/FullCircleButton" to="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer" method="_on_full_circle_button_toggled"]
[connection signal="pressed" from="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/ActionsHBoxContainer/ActionBackButton" to="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer" method="_on_action_back_button_pressed"]
[connection signal="pressed" from="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/ActionsHBoxContainer/ActionForwardButton" to="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer" method="_on_action_forward_button_pressed"]
[connection signal="pressed" from="HSplitContainer/CanvasAndRightPanelHSplitContainer/RightPanelContainer/SaveButton" to="HSplitContainer/CanvasAndRightPanelHSplitContainer/DrawingCanvasPanelContainer" method="_on_save_button_pressed"]
